<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tambah_data_user"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="20dp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/alamat" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Agama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/agama" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Jenis_kelamin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/jenis_kelamin" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/Hobi"
                    
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hobi" />
            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnTambah"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/design_default_color_primary"
                android:text="Tambah User" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>